# ai-eng-takehome

./: .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  WRITEUP.md  interactive.py  pyproject.toml
evaluation/: compare.py  evaluate.py
evaluation/data/: evals_easy.json  evals_hard.json
evaluation/data/guides/: accidents_safety.md  agriculture_crop_data.md  airline_operations.md  aquarium_management.md  archaeological_excavations.md  baseball_sabermetrics.md  basketball_reporting.md  blood_bank_inventory.md  chess_idiosyncrasies.md  competitive_gaming_esports.md  construction_project_management.md  consumer_expenditures.md  craft_beer_inventory.md  credit_card_operations.md  cryptocurrency_trading.md  election_polling.md  employee_hr_policies.md  energy_consumption.md  f1_racing_metrics.md  fashion_retail_inventory.md  financial_operations.md  fitness_tracking.md  hockey_analytics.md  hotel_reservations.md  insurance_claims.md  library_catalog.md  medical_data_compliance.md  movie_ratings.md  museum_collections.md  music_streaming_rules.md  pet_adoption_records.md  pharmacy_prescriptions.md  podcast_analytics.md  real_estate_transactions.md  recycling_programs.md  restaurant_health_inspections.md  sales_reporting.md  satellite_telemetry.md  shipping_logistics.md  social_media_analytics.md  (+10 more)
framework/: agent.py  database.py  llm.py  stream_printer.py  verifier.py
tools/: business_rules.py  check_sql.py  execute_sql.py  generate_sql.py  inspect_database.py  run_sql.py  schema_info.py  search_column.py  submit_answer.py  your_cool_tool_here.py
