[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["framework", "evaluation", "tools"]

[project]
name = "hecks-takehome"
version = "0.1.0"
description = "Agent Framework for SQL operations"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.0",
    "polars>=1.0.0",
    "rich>=13.0.0",
    "connectorx>=0.3.0",
    "pyarrow>=23.0.0",
    "sqlglot[rs]>=28.7.0",
    "duckdb>=1.0.0",
    "pandas>=2.0.0",
    "tqdm>=4.67.1",
    "tenacity>=8.0.0",
    "tiktoken>=0.12.0",
]

[project.scripts]
evaluate = "evaluation.evaluate:main"
interactive = "interactive:main"

[tool.ty.environment]
python-version = "3.13"

[tool.ty.terminal]
error-on-warning = true

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
